--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Sparta - TicTacToe</title>
-  <link rel="stylesheet" href="style.css">
-  <script src = "script.js" async></script>
+  <link rel="stylesheet" href="styles.css">
+  <script src = "main.js" async></script>
 </head>
 <body>
   <button id="reset">Reset Board</button>
