final commit, reset works, boxes are clickable but not alternating

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>Sparta - TicTacToe</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src = "main.js" async></script>
 </head>
 <body>
   <button id="reset">Reset Board</button>
-  <h2 class = "playerTurn">It is X's turn</h2>
+  <h2 class="playerTurn">It is X's turn</h2>
   <table>
     <thead>
       <tr>
@@ -32,8 +33,6 @@
       </tr>
     </tfoot>
   </table>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 
-  </script>
 </body>
 </html>
